<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".views.activities.MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcomeMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lbl_welcome_message"
            android:textSize="30sp"
            android:textColor="@color/colorAccent"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/main_description_message"
            android:text="@string/lbl_login_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:textColor="@color/colorTextIcons"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_below="@+id/welcomeMessage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"/>

        <LinearLayout
            android:id="@+id/holders"
            android:orientation="vertical"
            android:layout_below="@+id/main_description_message"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_margin="16dp"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/current_location"
                android:layout_width="match_parent"
                android:textColor="@color/colorAccent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/locationTextView"
                android:gravity="center"
                android:text="@string/location_holder"
                android:textColor="@color/colorTextIcons"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <View
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:text="@string/current_distance"
                android:layout_width="match_parent"
                android:textColor="@color/colorAccent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/distanceTextView"
                android:gravity="center"
                android:text="@string/distance_holder"
                android:textColor="@color/colorTextIcons"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/lbl_btn_login"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>

</RelativeLayout>
