<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcomeMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lbl_welcome_message"
            android:textSize="30sp"
            android:textColor="@color/colorAccent"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/login_description_message"
            android:text="@string/lbl_login_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:textColor="@color/colorTextIcons"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_below="@+id/welcomeMessage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/lbl_btn_login"
            android:layout_alignParentBottom="true" />

        <LinearLayout
            android:id="@+id/holders"
            android:orientation="vertical"
            android:layout_below="@+id/login_description_message"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_margin="16dp"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/current_location"
                android:layout_width="match_parent"
                android:textColor="@color/colorAccent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/locationTextView"
                android:gravity="center"
                android:text="@string/location_holder"
                android:textColor="@color/colorTextIcons"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <View
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:text="@string/current_distance"
                android:layout_width="match_parent"
                android:textColor="@color/colorAccent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/distanceTextView"
                android:gravity="center"
                android:text="@string/distance_holder"
                android:textColor="@color/colorTextIcons"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/holders"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            style="@android:style/Widget.ProgressBar.Large"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:visibility="gone"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/usernameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextIcons"
                android:inputType="textEmailAddress"
                android:hint="Username"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/usernameWrapper"
            android:layout_marginTop="4dp">

            <EditText
                android:id="@+id/password"
                android:textColor="@color/colorTextIcons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="Password"/>


        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</LinearLayout>
